--- a/pages/about.html
+++ b/pages/about.html
@@ -123,7 +123,7 @@
             <p>Want to collaborate to solve problems and real world challenges? <br>
                 Feel free to get in touch with me!
             </p> <br>
-            <a href="" class="button">
+            <a href="mailto:sharongamalliel@gmail.com" class="button">
                 Get In Touch
             </a>
         </section>
@@ -135,12 +135,12 @@
             Product Designer
         </div>
         <div class="social-icon">
-            <a href="">facebook</a>
-            <a href="">medium</a>
-            <a href="">dribbble</a>
-            <a href="">behance</a>
-            <a href="">linkedin</a>
-            <a href="">instagram</a>
+            <a href="https://www.facebook.com/jack.g.wilshere.3/">facebook</a>
+            <a href="https://gamallielsharon.medium.com/">medium</a>
+            <a href="https://dribbble.com/gamalliel19">dribbble</a>
+            <a href="https://www.behance.net/gamallielsharon">behance</a>
+            <a href="https://www.linkedin.com/in/gamalliel-sharon-43ba851a4/">linkedin</a>
+            <a href="https://www.instagram.com/gmllshrn/">instagram</a>
         </div>
         <div class="copyright">
             © 2021 Gamalliel Sharon
